exports[`test ifWithAssignment(false) && ifWithAssignment(true) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x;
  if ((x = \'hi\') && passIf) {
    return x + passIf;
  } else {
    return !passIf + x;
  }
}"
`;

exports[`test ifWithAssignment(false) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x = \'hi\';

  return !passIf + x;
}"
`;

exports[`test ifWithAssignment(true) 1`] = `
"export { ifWithAssignment };

function ifWithAssignment(passIf) {
  let x = \'hi\';

  return x + passIf;
}"
`;

exports[`test ifWithFunctionCall(false) && ifWithFunctionCall(true) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {
  let thing;

  if (passIf && (a => (thing = a, passIf))(\'hey\') && function (a) {
    return a;
  }(passIf)) {
    return thing + passIf;
  } else {
    return !passIf;
  }
}"
`;

exports[`test ifWithFunctionCall(false) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {
  !function (a) {
    return a;
  }(passIf);

  return !passIf;
}"
`;

exports[`test ifWithFunctionCall(true) 1`] = `
"export { ifWithFunctionCall };

function ifWithFunctionCall(passIf) {
  let thing;

  passIf && (a => (thing = a, passIf))(\'hey\');
  (function (a) {
    return a;
  })(passIf);

  return thing + passIf;
}"
`;
